app/assets/stylesheets/pages/pipelines.scss
/* ... */
/**
 * Play button with icon in dropdowns
 */
.ci-table .no-btn {
  border: none;
  background: none;
  outline: none;
  width: 100%;
  text-align: left;

  .icon-play {
    position: relative;
    top: 2px;
    margin-right: 5px;
    height: 13px;
    width: 12px;
  }
}

/**
 * Cross-project pipelines (applied conditionally to pipeline graph)
 */

.has-linked-pipelines.stage-column-list {
  display: inline-block;
}

.linked-pipelines-column {
  position: relative;

  & > ul {
    padding: 0;
  }

  &.graph-position-left {
    margin-right: $linked-project-column-margin;

    .cross-project-triangle {
      right: -64px;
    }
  }

  &.graph-position-right {
    margin-left: $linked-project-column-margin;

    .cross-project-triangle {
      left: -64px;
    }
  }

  .linked-pipeline.build {
    font-style: italic;
    height: 40px;

    // apply custom dimensions to connector before and after for triangle arrow
    &.flat-connector-before {
      @include flat-connector-before($linked-project-column-margin);
    }

    &::after {
      right: -$linked-project-column-margin;
      width: $linked-project-column-margin;
    }

    .linked-pipeline-content {
      @include build-content(0);
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
}

.stage-column.has-upstream {
  margin-left: $linked-project-column-margin;

  .left-connector {
    @include flat-connector-before($linked-project-column-margin);
  }
}

.stage-column.has-downstream {
  margin-right: $linked-project-column-margin;

  .build {
    &:first-child {
      &::after {
        right: -$linked-project-column-margin;
        width: $linked-project-column-margin;
      }
    }
  }
}

.cross-project-triangle {
  position: absolute;
  top: 49px;
  width: 0;
  height: 0;
  border-bottom: 7px solid transparent;
  border-top: 7px solid transparent;
  border-left: 7px solid $gray-darkest;
  font-size: 0;
  line-height: 0;
  z-index: 10;
}

.project-name-pipeline-id-separator {
  display: inline-block;
  margin: 4px 2px 0 2px;
  font-size: 10px;
  vertical-align: top;
}

